modify aboutus card size, fix member list align

--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -26,14 +26,16 @@
 #group-img
   position: fixed
   transform: translate(0, -5%)
-
+  background-image: url('../file/groupphoto_M.png')
   /*top: 0;
   top: 0
   left: 0
-  width: 100%
-  height: auto
+  width: 100vw
+  height: 100%
   opacity: 1
   z-index: 0
+  background-size: 100% auto
+  background-repeat: no-repeat;
 
 /*******
 /*header
@@ -49,11 +51,10 @@ h1
   text-decoration: none
 
 p
-  /*要怎麼限制在一定的(左右)範圍內？
   position: static
   text-align: center
   color: var(--fontcolor-text)
-  font-size: 18px
+  font-size: 1.2rem
   font-weight: 500
   font-family: var(--font-family-text)
   font-style: var(--font-style-text)
@@ -121,7 +122,7 @@ a
   background-color: white
 
   /*UL/UR/DR/DL
-  border-radius: 4rem 4rem 0px 0px
+  border-radius: 4rem 4rem 0 0
   width: 100%
   top: 85%
   z-index: 1
@@ -145,9 +146,9 @@ a
 .card
   position: relative
   background-color: #F5F5F5
-  height: 300px
-  width: 193px
-  font-size: 36px
+  height: 19rem
+  width: 12rem
+  font-size: 2rem
 
   /*UL/UR/DR/DL
   border-radius: 1.5rem
@@ -192,7 +193,7 @@ a
   z-index: 4
 
   *
-    font-size: 36px
+    font-size: 2rem
     text-align: left
     color: var(--fontcolor-header)
 
@@ -202,14 +203,14 @@ a
     margin: 2% 0
 
 .personal-name
-  font-size: 36px
+  font-size: 2rem
   line-height: 1em
   margin: 0
   padding-top: 5%
   padding-left: 5%
 
 .description
-  font-size: 18px
+  font-size: 1rem
   padding-right: 10%
   text-align: left
 
@@ -276,28 +277,37 @@ a
 @media only screen and (max-width: 480px)
   /* display on phone
   #group-img
-    top: 2rem
+    top: 5rem
+    background-image: url('../file/groupphoto_S.png')
 
   #slogan
     margin: 0 14vw
 
   #img-cards
-    top: 14rem
+    top: 68vw
     border-radius: 2.5rem
     h1
       font-size: 3rem
       font-weight: 500
     #slogan
-      font-size: 1rem
+      font-size: 0.9rem
     #cards
+      margin: 0
       .logs
         width: 100%
         margin-bottom: 10rem;
       #gap3
         height: 20vh;
 
-  .card
-    margin-bottom: 5%
+      .card
+        margin-bottom: 5%
+        height: 13rem;
+        width: 8rem;
+        .card-detail
+          .personal-name
+            font-size: 1.5rem;
+          .description
+            font-size: 0.9rem;
 
   .flex-row
     margin: 0
