--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -700,7 +700,7 @@ input[type='button']:active
       width: 97%
       
       .virtual-info
-        width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1.7rem + 2.3rem)
+        width: calc((100% - 5rem) / 2 + 1.3rem)
         height: 0
       
       .member-info:hover
@@ -785,7 +785,10 @@ input[type='button']:active
             width: 25vw
             #eventpic
               p
-                line-height: 35vw
+                line-height: 25vw
+                font-size: 0.7rem;
+                font-weight: 700;
+                color: var(--black-3);
           #event-heading
             min-width: 0;
             width: calc((100% - 27vw));
